# ticklist-mapper

./: .gitignore  Dockerfile  Makefile  README.md  fly.toml  pyproject.toml  requirements.txt
docs/: 2023-02-bishop.csv  2023-02-bishop.html
tests/: test_mountain_project.py
ticklist_mapper/: api.py  main.py  mountainproject.py
ticklist_mapper/templates/: base.html  iframe.html  index.html  message.html
